# Django-templates

./: .gitignore  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini
apps/layout/: README.md
apps/layout/templates/layout/: base.html  side_navi.html  top_navi.html
apps/new_app/: apps.py  domain.py  dto.py  models.py  repository.py  services.py  urls.py  validators.py  views.py
apps/new_app/migrations/: 0001_initial.py  0002_exampledomainmodel_is_deleted.py
apps/new_app/templates/new_app/: example.html
common/: log_setter.py
common/utils/: swagger.py
logs/: appname_error.log.2024-06-10  appname_info.log.2024-06-10
myproject/: asgi.py  db.sqlite3  urls.py  wsgi.py
myproject/app_skeleton/: domain.py  dto.py  exceptions.py  models.py  repository.py  services.py  urls.py  views.py
myproject/app_skeleton/templates/: example.html
myproject/app_skeleton/tests/: conftest.py  test_service.py  test_view.py
myproject/management/commands/: startapp.py
myproject/settings/: base.py  local.py  prod.py
tests/new_app/: test_repository.py  test_service.py
